--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@babel/core": "^7.1.6",
     "@babel/preset-env": "^7.1.6",
     "@babel/preset-es2017": "^7.0.0-beta.53",
-    "@babel/register": "^7.0.0"
+    "@babel/register": "^7.0.0",
+    "eslint": "^5.9.0"
   }
 }
